# pcb-toolkit

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  PROGRESS.md  README.md  STATUS.md
.github/workflows/: ci.yml  release.yml
crates/pcb-toolkit/: Cargo.toml  README.md
crates/pcb-toolkit-cli/: Cargo.toml  README.md
crates/pcb-toolkit-cli/src/: main.rs  output.rs
crates/pcb-toolkit-cli/src/commands/: crosstalk.rs  current.rs  differential.rs  fusing.rs  impedance.rs  inductor.rs  mod.rs  ohms_law.rs  padstack.rs  pdn.rs  ppm.rs  reactance.rs  spacing.rs  thermal.rs  via.rs  wavelength.rs  wire_gauge.rs
crates/pcb-toolkit/src/: constants.rs  copper.rs  crosstalk.rs  current.rs  error.rs  fusing.rs  inductor.rs  lib.rs  materials.rs  ohms_law.rs  padstack.rs  pdn.rs  ppm.rs  reactance.rs  spacing.rs  thermal.rs  units.rs  via.rs  wavelength.rs  wire_gauge.rs
crates/pcb-toolkit/src/differential/: broadside_coupled.rs  edge_coupled_embedded.rs  edge_coupled_external.rs  edge_coupled_internal_asym.rs  edge_coupled_internal_sym.rs  mod.rs  types.rs
crates/pcb-toolkit/src/impedance/: common.rs  coplanar.rs  embedded.rs  microstrip.rs  mod.rs  stripline.rs  types.rs
crates/pcb-toolkit/src/tables/: interpolate.rs  mod.rs
docs/notes/: 00-overview.md  01-impedance.md  02-differential-pairs.md  03-via-properties.md  04-conductor-current.md  05-planar-inductor.md  06-padstack.md  07-crosstalk.md  08-ohms-law.md  09-reactance.md  10-er-effective.md  11-wavelength.md  12-ppm-calculator.md  13-fusing-current.md  14-conductor-spacing.md  15-materials-data.md  16-rust-design-research.md  17-test-vectors.md  ghidra-broadside-coupled.md  ghidra-conductor-current.md  ghidra-conductor-spacing.md  ghidra-edge-coupled.md  ghidra-fusing-inductor.md  ghidra-impedance.md  ghidra-ohmslaw.md  ghidra-padstack.md  ghidra-pdn-impedance.md  ghidra-ppm-reactance-mode15.md  ghidra-stripline.md  ghidra-thermal-management.md  ghidra-via-properties.md  materials-er-mapping.md  stripline-formulas-clean.md
