[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akiselev/pcb-toolkit"
homepage = "https://github.com/akiselev/pcb-toolkit"
authors = ["Alexander Kiselev <alex@akiselev.com>"]

[workspace.dependencies]
pcb-toolkit = { path = "crates/pcb-toolkit" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
toml = "0.8"
approx = "0.5"

[workspace.lints.clippy]
disallowed_types = "deny"
