[package]
name = "pcb-toolkit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

description = "Command-line PCB design calculator — impedance, current capacity, via properties, and more"
documentation = "https://docs.rs/pcb-toolkit-cli"
readme = "README.md"
keywords = ["pcb", "eda", "impedance", "electronics", "calculator"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "pcb-toolkit"
path = "src/main.rs"

[dependencies]
pcb-toolkit = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
