[package]
name = "pcb-toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PCB design calculator library — impedance, current capacity, via properties, and more"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
