[package]
name = "pcb-toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

description = "PCB design calculator library — impedance, current capacity, via properties, and more"
documentation = "https://docs.rs/pcb-toolkit"
readme = "README.md"
keywords = ["pcb", "eda", "impedance", "electronics", "calculator"]
categories = ["science", "mathematics"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
